--- a/.github/workflows/frontendcicd.yml
+++ b/.github/workflows/frontendcicd.yml
@@ -5,6 +5,8 @@ on:
   push:
     branches:
     - main
+    paths-ignore:
+      - '**/README.md'
 
 jobs:
   deploy:
@@ -13,7 +15,7 @@ jobs:
     - uses: actions/checkout@master
     - uses: jakejarvis/s3-sync-action@master
       with:
-        args: --acl private --follow-symlinks --delete --exclude 'README.md'
+        args: --acl private --follow-symlinks --delete --exclude '.git/*' --exclude '.github/*' --exclude 'README.md'
       env:
         AWS_S3_BUCKET: ${{ secrets.AWS_S3_BUCKET }}
         AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
